# ftmq-search

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
ftmq_search/: cli.py  logic.py  model.py  settings.py
ftmq_search/store/: __init__.py  base.py  tantivy.py
tests/: conftest.py  test_store.py  test_transform.py
