[project]
name = "ftmq-search"
version = "0.0.4"
description = "followthemoney data search experiments based on ftmq"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.15"
dependencies = ["ftmq (>=4.10.0,<5.0.0)"]

[project.optional-dependencies]
tantivy = ["tantivy (>=0.26.0,<0.27.0)"]

[project.scripts]
ftmqs = "ftmq_search.cli:cli"

[project.urls]
Homepage = "https://github.com/dataresearchcenter/ftmq-search"
Repository = "https://github.com/dataresearchcenter/ftmq-search"
Documentation = "https://github.com/dataresearchcenter/ftmq-search"
Issues = "https://github.com/dataresearchcenter/ftmq-search/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = ">=7.1.0,<8.0"
black = ">=23.11,<25.0"
isort = "^8.0.1"
mypy = "^2.3.0"
pre-commit = ">=4.6.1,<5.0"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
cloudpickle = ">=2.2.1,<4.0.0"
pytest-env = "^1.1.1"
bump-pydantic = ">=0.7,<0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
